# Baduk

./: .gitignore  LICENSE  README.md  apply_patch.py  baduk.spec  pyproject.toml  requirements-release.txt  requirements.txt  run.py  saved_self_play.json
pklfiles/: blank.pkl  dumb bot.pkl  mid game.pkl
sgf/: get-ogs-games.sh
src/GoGame/: botnormalgo.py  config.py  game_initialization.py  goclasses.py  goclasses.py.bak  handicap.py  main.py  mcst.py  neuralnet.py  neuralnetboard.py  nnmcst.py  player.py  pygame_ui.py  remove_dead.py  remove_dead.py:Zone.Identifier  saving_loading.py  scoringboard.py  sgf_to_training.py  stone_renderer.py  turn_options.py  uifunctions.py  undoing.py
