[project]
name = "my-package"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires =['setuptools>=68.0', 'wheel']
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "test_cases",
]

